<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#7DD1EC"
    android:orientation="vertical"
    tools:context=".leaderboard.LeaderBoardFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/vt323"
        android:gravity="center"
        android:text="@string/leaderboard_title"
        android:textColor="#000000"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="#489ED5"
        android:orientation="vertical"
        android:padding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/vt323"
                android:gravity="center"
                android:text="@string/leaderboard_rank"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/vt323"
                android:gravity="center"
                android:text="@string/leaderboard_user"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/vt323"
                android:gravity="center"
                android:text="@string/leaderboard_score"
                android:textColor="#000000"
                android:textSize="30sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_leaderboard_scores"
            android:layout_width="match_parent"
            android:layout_height="470sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_leaderboard_back"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#258A14"
        android:fontFamily="@font/vt323"
        android:paddingBottom="10sp"
        android:text="@string/all_backButton"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:cornerRadius="30sp" />

</LinearLayout>