<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7DD1EC"
    android:orientation="vertical"
    tools:context=".authentication.LoginFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:fontFamily="@font/vt323"
        android:gravity="center"
        android:text="@string/login_header"
        android:textColor="#000000"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:background="#CC489ED5"
        android:orientation="vertical">

        <Space
            android:id="@+id/space_login_feedback"
            android:layout_width="match_parent"
            android:layout_height="15sp" />

        <TextView
            android:id="@+id/textView_login_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/vt323"
            android:text="@string/login_feedback"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editText_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="@font/vt323"
            android:hint="@string/login_usernameHint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editText_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:fontFamily="@font/vt323"
            android:hint="@string/login_passwordHint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/button_login_loginButton"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:backgroundTint="#258C14"
            android:fontFamily="@font/vt323"
            android:paddingBottom="10sp"
            android:text="@string/all_loginButton"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:cornerRadius="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="40sp" />

    <Button
        android:id="@+id/button_login_back"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5sp"
        android:backgroundTint="#258C14"
        android:fontFamily="@font/vt323"
        android:paddingBottom="10sp"
        android:text="@string/all_backButton"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:cornerRadius="30sp" />

</LinearLayout>