<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00695C"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="50dp"
    android:paddingRight="20dp"
    android:paddingBottom="50dp"
    tools:context=".game.GameOverFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:fontFamily="@font/vt323"
        android:text="@string/game_over"
        android:textColor="#000000"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textView_gameOver_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:fontFamily="@font/vt323"
        android:textColor="#000000"
        android:textSize="48sp"
        tools:text="Score: X" />

    <TextView
        android:id="@+id/textView_gameOver_highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:fontFamily="@font/vt323"
        android:textColor="#000000"
        android:textSize="48sp"
        tools:text="High Score: X" />

    <Button
        android:id="@+id/button_gameOver_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:fontFamily="@font/vt323"
        android:text="@string/game_restart"
        app:iconGravity="textEnd"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/button_gameOver_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:backgroundTint="#4CAF50"
        android:fontFamily="@font/vt323"
        android:text="@string/game_quit"
        app:iconGravity="textEnd"
        app:strokeColor="#FFFFFF" />

</LinearLayout>